// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover all options renders 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <div
      style="display: contents;"
    >
      <button
        aria-controls="radix-4"
        aria-expanded="true"
        aria-haspopup="dialog"
        data-state="open"
        data-testid="trigger"
        type="button"
      >
        trigger
      </button>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate3d(-6px, 0px, 0); min-width: max-content; --radix-popper-transform-origin: 0px 50%;"
  >
    <div
      class="bg-white border--white color-text border shadow-darken25 round border border-1 border--border--white"
      data-align="center"
      data-side="left"
      data-state="open"
      data-testid="foo"
      id="radix-4"
      role="dialog"
      style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); opacity: 0;"
      tabindex="-1"
    >
      <span
        class="txt-kbd"
      >
        Greetings
      </span>
      <span
        class="color-green txt-kbd"
      >
        human
      </span>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Popover basic renders 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <div
      style="display: contents;"
    >
      <button
        aria-controls="radix-0"
        aria-expanded="true"
        aria-haspopup="dialog"
        data-state="open"
        data-testid="trigger"
        type="button"
      >
        trigger
      </button>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate3d(6px, 0px, 0); min-width: max-content; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="bg-white border--white color-text border shadow-darken25 round px12 py12 border border-1 border--border--white"
      data-align="center"
      data-side="right"
      data-state="open"
      id="radix-0"
      role="dialog"
      style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin);"
      tabindex="-1"
    >
      Popup content
      <span
        style="position: absolute; left: 0px; transform-origin: 0 0; transform: translateY(50%) rotate(90deg) translateX(-50%); top: 0px;"
      >
        <svg
          fill="#fff"
          height="6"
          offset="6"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="12"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Popover dark renders 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <div
      style="display: contents;"
    >
      <button
        aria-controls="radix-1"
        aria-expanded="true"
        aria-haspopup="dialog"
        data-state="open"
        data-testid="trigger"
        type="button"
      >
        trigger
      </button>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate3d(6px, 0px, 0); min-width: max-content; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="bg-gray-dark border--gray-dark color-white border shadow-darken25 round px12 py12 border border-1 border--border--gray-dark"
      data-align="center"
      data-side="right"
      data-state="open"
      id="radix-1"
      role="dialog"
      style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin);"
      tabindex="-1"
    >
      Content is rendered
      <span
        style="position: absolute; left: 0px; transform-origin: 0 0; transform: translateY(50%) rotate(90deg) translateX(-50%); top: 0px;"
      >
        <svg
          fill="#0E2127"
          height="6"
          offset="6"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="12"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Popover no arrow renders 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <div
      style="display: contents;"
    >
      <button
        aria-controls="radix-3"
        aria-expanded="true"
        aria-haspopup="dialog"
        data-state="open"
        data-testid="trigger"
        type="button"
      >
        trigger
      </button>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate3d(6px, 0px, 0); min-width: max-content; --radix-popper-transform-origin: 0px 50%;"
  >
    <div
      class="bg-white border--white color-text border shadow-darken25 round px12 py12 border border-1 border--border--white"
      data-align="center"
      data-side="right"
      data-state="open"
      id="radix-3"
      role="dialog"
      style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin);"
      tabindex="-1"
    >
      <div>
        no arrow
      </div>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Popover warning renders 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <div
      style="display: contents;"
    >
      <button
        aria-controls="radix-2"
        aria-expanded="true"
        aria-haspopup="dialog"
        data-state="open"
        data-testid="trigger"
        type="button"
      >
        trigger
      </button>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate3d(6px, 0px, 0); min-width: max-content; --radix-popper-transform-origin: 0px 0px;"
  >
    <div
      class="bg-orange-faint border--orange-deep color-orange-deep border shadow-darken25 round px12 py12 border border-1 border--border--orange-deep"
      data-align="center"
      data-side="right"
      data-state="open"
      id="radix-2"
      role="dialog"
      style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin);"
      tabindex="-1"
    >
      <span>
        HI there
      </span>
      <span
        style="position: absolute; left: 0px; transform-origin: 0 0; transform: translateY(50%) rotate(90deg) translateX(-50%); top: 0px;"
      >
        <svg
          fill="#A55109"
          height="6"
          offset="6"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="12"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
